Arreglando detalles que encontre

--- a/WebContent/admitPatient.html
+++ b/WebContent/admitPatient.html
@@ -124,9 +124,9 @@
 							   <label> Motivo de la admisión:</label> <input type="text" name="reasonAdmission" id="reasonAdmission" value="" ><br><br>
 							    
 							    <label> Ubicación:  </label>
-								<input type="text" name="ubication" id="ubication" value="UCI" readonly><br><br>
+								<input type="text" name="ubication" id="ubication" readonly><br><br>
 								 
-								<label> Cama:</label>  <input type="text" name="bedId" id="bedId" value="Cama 1" readonly>
+								<label> Cama:</label>  <input type="text" name="bedId" id="bedId"  readonly>
 							    <a href="searchBed.html?function=admitPatient" style="color: #f7941e; font-weight: bold;">
 									<input type="button"id="bedUbication" value="Cambiar" >
 								</a> <br><br>
