--- a/WebContent/bank.html
+++ b/WebContent/bank.html
@@ -78,7 +78,7 @@
 					<li><a href="supplyAreas.html">Suministros</a></li>
 					<li><a href="departments.html">Departamentos</a></li>
 					<li><a href="doctors.html">Doctores</a></li>
-					<li><a href="bank.html">Cajas</a></li>
+					<li><a class="active" href="bank.html">Cajas</a></li>
 					<li><a href="bankAccounts.html">Bancos</a></li>
 					<li><a href="accounts.html">Cuentas</a></li>   
 				</ul>
@@ -110,10 +110,10 @@
 										<td>
 											<a id="go" rel="leanModal" href="#closeCashW" style="color: #f7941e; font-weight: bold;"
 											onclick="return loadVars(1001,'Administración');" >
-												<img alt="logo" src="./images/close.png"  height="16" width="16" title="Ver Detalle" />
+												<img alt="logo" src="./images/close.png"  height="16" width="16" title="Cerrar Caja" />
 											</a>
 											<a href="showCashBox.html" style="color: transparent" >
-												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
+												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Abrir Caja" />
 											</a>
 											<a id="go" rel="leanModal" href="#deleteCash" style="color: #f7941e; font-weight: bold;" 
 												onclick="return loadVars(1001,'Administración');" >
