--- a/WebContent/createAccountMovement.html
+++ b/WebContent/createAccountMovement.html
@@ -35,12 +35,7 @@
 				<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
 		    	<ul>
 	            	<li class="menuitem"><a href="bankAccounts.html">Ver Cuentas</a></li>
-	            </ul>	            	
-				<ul>
-	            	<li class="menuitem"><a href="createBankAccount.html">Crear Cuenta</a></li>
-	            </ul>
-				<ul>
-	            	<li class="menuitem"><a href="accountMovements.html">Ver Movimientos</a></li>
+	            	<li class="menuitem"><a href="accountMovements.html" style="margin-left:10px;">Ver Movimientos</a></li>
 	            </ul>
 				<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         	</div>        
