--- a/WebContent/createAccountPayable.html
+++ b/WebContent/createAccountPayable.html
@@ -105,7 +105,7 @@
 							<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
 							<label for="name">Proveedor:</label>
 							<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> 
-								<a href="createSupplier.html"> <input type="submit"  class="button"  name="sbmtButton" value="Nuevo..." /></a><br><br>
+								<a href="createSupplier.html?function=createAccountPayable"> <input type="submit"  class="button"  name="sbmtButton" value="Nuevo..." /></a><br><br>
 							<label for="name">Fecha Facturación:</label>
 							<input type="text" name="txtDateIni" id="txtDateIni" maxlength="50" size="10" /> <br><br>
 							<label for="name">Fecha Vencimiento:</label>
