--- a/WebContent/createCashBox.html
+++ b/WebContent/createCashBox.html
@@ -35,7 +35,7 @@
 						<li><a href="supplyAreas.html">Suministros</a></li>
 						<li><a href="departments.html">Departamentos</a></li>
 						<li><a href="doctors.html">Doctores</a></li>
-						<li><a href="bank.html">Cajas</a></li>
+						<li><a class="active" href="bank.html">Cajas</a></li>
 						<li><a href="bankAccounts.html">Bancos</a></li>
 						<li><a href="accounts.html">Cuentas</a></li>
 					</ul>
