--- a/WebContent/createEstimationForm.html
+++ b/WebContent/createEstimationForm.html
@@ -90,7 +90,11 @@
 		        	<a id="go" rel="leanModal"  href="#deleteVitalSign" style="color: #f7941e; font-weight: bold;" >
 						<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
 					</a>	 
-	        	
+	        		<div id="botonera" style="width:100px;">
+						<div id="botonV" style="display: inline;">
+								<input type="button" class="button" value="Regresar" onClick="javascript:history.back();" />		
+						</div>		
+					</div>	
 				
 			
 			</div>
