--- a/WebContent/createInsurance.html
+++ b/WebContent/createInsurance.html
@@ -42,6 +42,33 @@
 				});
 			} );
 		</script>
+		<script type="text/javascript">
+		$(document).ready(function() {
+			
+			function getUrlVars() {
+			    var vars = {};
+			    var parts = window.location.href.replace(/[?&]+([^=&]+)=([^&]*)/gi, function(m,key,value) {
+			        vars[key] = value;
+			    });
+			    return vars;
+			}
+
+			var first = getUrlVars()["function"];
+			first = first.replace(/\+/g, ' ');
+			if (first != null){
+				if (first.indexOf("Receivable") > 0){
+					if (first == "createReceivable"){
+						$("#form").attr('action', 'createReceivable.html#tabs-1');
+						$("#form2").attr('action', 'createReceivable.html#tabs-1');
+					}
+					else if(first == "editReceivable")
+						$("#form").attr('action', 'editReceivable.html#tabs-1');
+				}
+			}
+				
+		});
+		
+	</script>
 		<link rel="stylesheet" href="/resources/demos/style.css" />		
 	</head>
 	<body>
@@ -108,12 +135,10 @@
 							
 						</fieldset>						
 						<div id="botonera">
-							<form action="editReceivable.html#tabs-1" style="display: inline; ">
+							<form id="form" action="" style="display: inline; ">
 								<div id="botonP" style="display: inline; margin-right: 30px;">
 											<input type="submit"  class="button"  name="sbmtButton" value="Agregar" />
 								</div>
-							</form>	
-							<form action="editReceivable.html#tabs-1" style="display: inline; ">
 								<div id="botonV" style="display: inline; margin-right: 30px;" >
 										<input type="submit" class="button" value="Regresar" />		
 								</div>
@@ -142,12 +167,10 @@
 							<input type="checkbox" name="option" value="PreAdm" style="margin-left: 50px;margin-right:5px;">Permite Pre-Admisión 
 						</fieldset>						
 						<div id="botonera">
-							<form action="editReceivable.html#tabs-1" style="display: inline; ">
+							<form id="form2" action="" style="display: inline; ">
 								<div id="botonP" style="display: inline; margin-right: 30px;">
-											<input type="submit"  class="button"  name="sbmtButton" value="Agregar" />
+										<input type="submit"  class="button"  name="sbmtButton" value="Agregar" />
 								</div>
-							</form>	
-							<form action="editReceivable.html#tabs-1" style="display: inline; ">
 								<div id="botonV" style="display: inline; margin-right: 30px;" >
 										<input type="submit" class="button" value="Regresar" />		
 								</div>
