--- a/WebContent/createPreAdmission.html
+++ b/WebContent/createPreAdmission.html
@@ -82,6 +82,9 @@
 	        </div>         
         	<div id="menu">
 				<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
+		    	<ul>
+            		<li class="menuitem"><a href="preAdmission.html">Ver Pre-Admisiones</a></li>
+           		 </ul>
 		    	<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         	</div>        
 			<div id="leftmenu">
