--- a/WebContent/createReceivable.html
+++ b/WebContent/createReceivable.html
@@ -78,7 +78,7 @@
 							<input type="text" name="txtControl" id="txtControl" maxlength="50" size="5"/> <br><br>
 							<label for="name">Responsable Pago:</label>
 							<input type="text" name="txtInsurance" id="txtInsurance" maxlength="50" size="5"/>
-							<a href="createInsurance.html"><input type="submit"  class="button"  name="sbmtButton" value="Nuevo..." /></a> <br><br>
+							<a href="createInsurance.html?function=createReceivable"><input type="submit"  class="button"  name="sbmtButton" value="Nuevo..." /></a> <br><br>
 							<label for="name">Monto a Cobrar:</label>
 							<input type="text" name="txtMount" id="txtMount" maxlength="50" size="5"/> <br><br>
 							<label for="name">IVA:</label>
