--- a/WebContent/editEstimation.html
+++ b/WebContent/editEstimation.html
@@ -42,7 +42,9 @@
         	<div id="menu">
 				<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
 		    	<ul>
-	            	<li class="menuitem"><a href="createEstimationForm.html">Crear Presupuesto</a></li>
+	            	<li class="menuitem"><a href="estimations.html">Ver Presupuestos</a></li>
+	            	<li class="menuitem"><a href="createEstimation.html" style="margin-left:10px;">Crear Presupuesto</a></li>
+	     
 	            </ul>
 				<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         	</div>        
