--- a/WebContent/searchProtocols.html
+++ b/WebContent/searchProtocols.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 	<link rel="stylesheet" type="text/css" href="./css/styleAdmin.css" />
-	<title>Protocolos</title>
+	<title>Agregar Protocolo</title>
 	<script type="text/javascript" src="./js/jquery.js"></script>
 	<script type="text/javascript" src="./js/jquery.dataTables.js"></script>
 	<script type="text/javascript" src="./js/jquery.leanModal.min.js"></script>
@@ -175,7 +175,7 @@
 											<input type="submit"  class="button"  name="sbmtButton" value="Agregar" />
 								</div>	
 								<div id="botonV" style="display: inline;">
-										<input type="button" class="button" value="Regresar" onClick="javascript:history.back();" />		
+										<input type="submit" class="button" value="Regresar" />		
 								</div>	
 							</form>
 							</div><br>
