--- a/WebContent/showCashBox.html
+++ b/WebContent/showCashBox.html
@@ -31,7 +31,7 @@
 						<li><a href="supplyAreas.html">Suministros</a></li>
 						<li><a href="departments.html">Departamentos</a></li>
 						<li><a href="doctors.html">Doctores</a></li>
-						<li><a href="bank.html">Cajas</a></li>
+						<li><a class="active" href="bank.html">Cajas</a></li>
 						<li><a href="bankAccounts.html">Bancos</a></li>
 						<li><a href="accounts.html">Cuentas</a></li>  
 					</ul>
@@ -40,13 +40,7 @@
 	        </div>
         	<div id="content" style="position:absolute;">	
 	        	<h2>Estatus Caja:</h2>   
-	        		<div id="closeCash">
-		        		<a id="go" rel="leanModal" href="#deleteUser" style="font-weight: bold;" 
-							onclick="return loadVars(1001,'Ana Rojas');" >
-							<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/> Cerrar Caja
-						</a> 
-					</div>					
-				<br>
+	        	<br>
 				<p>
 			   	<b>Caja:</b> Administracion<br><br>
 			    <b>Fecha Apertura:</b> 20/07/2013<br><br>
