--- a/WebContent/showEmergency.html
+++ b/WebContent/showEmergency.html
@@ -20,7 +20,10 @@
 	        	<img alt="logo" src="./images/logo.png"/>
 	        </div>         
         	<div id="menu">
-				<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
+				<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>
+				<ul>
+	            	<li class="menuitem"><a href="emergencies.html">Ver Emergencias</a></li>
+	              </ul>	
 				<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         	</div>        
 			<div id="leftmenu">
