--- a/WebContent/editAccountPayable.html
+++ b/WebContent/editAccountPayable.html
@@ -104,7 +104,7 @@
 							<input type="text" name="txtName" id="txtName" maxlength="50" size="5" value="1725778"/> <br><br>
 							<label for="name">Proveedor:</label>
 							<input type="text" name="txtName" id="txtName" maxlength="50" size="5" value="Anthony Bernal"/> 
-							<a href="createSupplier.html"> <input type="submit"  class="button"  name="sbmtButton" value="Nuevo..." /></a><br><br>
+							<a href="createSupplier.html?function=editAccountPayable"> <input type="submit"  class="button"  name="sbmtButton" value="Nuevo..." /></a><br><br>
 							<label for="name">Fecha Facturación:</label>
 							<input type="text" name="txtDateIni" id="txtDateIni" maxlength="50" size="10" value="18/07/2013" /> <br><br>
 							<label for="name">Fecha Vencimiento:</label>
