--- a/WebContent/editEmergency.html
+++ b/WebContent/editEmergency.html
@@ -67,6 +67,9 @@
 	        </div>         
         	<div id="menu">
 				<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
+				<ul>
+            		<li class="menuitem"><a href="emergencies.html">Ver Emergencias</a></li>
+           		</ul>
 				<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         	</div>        
 			<div id="leftmenu">
