--- a/WebContent/editVitalSignsDetail.html
+++ b/WebContent/editVitalSignsDetail.html
@@ -126,7 +126,7 @@
 							<input type="submit"  class="button"  name="sbmtButton" value="Editar" />
 				</div>	
 				<div id="botonV" style="display: inline;">
-						<input type="button" class="button" value="Regresar" onClick="javascript:history.back();" />		
+						<input type="submit" class="button" value="Regresar"  />		
 				</div>	
 			</form> 
 		</div>  
