--- a/WebContent/preAdmission.html
+++ b/WebContent/preAdmission.html
@@ -1,9 +1,9 @@
-<!DOCTYPE >
+<!DOCTYPE html>
 <html>
 	<head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 	<link rel="stylesheet" type="text/css" href="./css/styleAdmin.css" />
-	<title>Movimientos</title>
+	<title>Pre-Admisión</title>
 	<script type="text/javascript" src="./js/jquery.js"></script>
 	<script type="text/javascript" src="./js/jquery.dataTables.js"></script>
 	<script type="text/javascript" src="./js/jquery.leanModal.min.js"></script>
@@ -15,6 +15,7 @@
 			"sScrollY": "250px",
 			"bPaginate": false,
 			"aoColumns": [
+				null,
 				null,
 				null,
 				null,
@@ -51,6 +52,8 @@
 		f.elements['userId'].value = idUser;
 		return true;
 	}
+	
+	
 	</script>
 </head>
 <body>
@@ -59,12 +62,11 @@
         	<img alt="logo" src="./images/logo.png"/>
         </div>         
         <div id="menu">
-			<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>					
+			<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
 	    	<ul>
-            	<li class="menuitem"><a href="bankAccounts.html">Ver Cuentas</a></li>
-            	<li class="menuitem"><a href="createAccountMovement.html" style="margin-left: 10px;">Crear Movimiento</a></li>
+            	<li class="menuitem"><a href="createPreAdmission.html">Crear Pre-Admisión</a></li>
             </ul>
-	    	<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
+			<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         </div>        
 		<div id="leftmenu">
 			<div id="leftmenu_top"></div>
@@ -72,7 +74,7 @@
 				<ul>
 				    <li><a href="estimations.html">Presupuestos</a></li>
 				    <li><a href="emergencies.html">Emergencia</a></li>
-					<li><a href="admission.html">Admisión</a></li>
+					<li><a class="active" href="admission.html">Admisión</a></li>
 				    <li><a href="hospitalization.html">Hospitalización</a></li>
 					<li><a href="protocols.html">Protocolos</a></li>
 					<li><a href="services.html">Servicios</a></li>
@@ -80,14 +82,14 @@
 					<li><a href="departments.html">Departamentos</a></li>
 					<li><a href="doctors.html">Doctores</a></li>
 					<li><a href="bank.html">Cajas</a></li>
-					<li><a class="active" href="bankAccounts.html">Bancos</a></li>
-					<li><a href="accounts.html">Cuentas</a></li> 
+					<li><a href="bankAccounts.html">Bancos</a></li>
+					<li><a href="accounts.html">Cuentas</a></li>   
 				</ul>
 			</div>
             <div id="leftmenu_bottom"></div>
         </div>  
 		<div id="content">  
-			<h2>Movimientos:</h2>
+			<h2>Pre-Admisión:</h2>
 			<div id="dt_example">
 					<div id="container">
 						<div id="demo">
@@ -95,24 +97,26 @@
 								<thead>
 									<tr>
 										<th>ID</th>
-										<th>Fecha</th>
-										<th>Tipo</th>
-										<th>Monto</th>
+										<th>Paciente</th>
+										<th>Cédula</th>
+										<th>Seguro</th>
+										<th>Condición de Pago</th>
 										<th>Acciones</th>
 									</tr>
 								</thead>
 								<tbody>			
 									<tr class="gradeA">
 										<td>1001</td>
-										<td>14/08/2013</td>
-										<td>Orden de Pago</td>
-										<td>-250.00</td>
+										<td>Ana Rojas</td>
+										<td>V-3215641</td>
+										<td>-</td>
+										<td>Contado</td>
 										<td>
-											<a href="showAccountMovement.html" style="color: transparent" >
+											<a href="showAdmission.html" style="color: transparent" >
 												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
 											</a>
 											<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
-												onclick="return loadVars(1001,'1001');" >
+												onclick="return loadVars(1001,'Ana Rojas');" >
 												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
 											</a> 
 											<br>
@@ -120,15 +124,16 @@
 									</tr>
 									<tr class="gradeA">
 										<td>1002</td>
-										<td>13/08/2013</td>
-										<td>Pago a Proveedores</td>
-										<td>-1200.00</td>
+										<td>Luis Mujica</td>
+										<td>V-7643187</td>
+										<td>La Previsora</td>
+										<td>Orden de Seguro</td>
 										<td>
 											<a href="#" style="color: transparent" >
 												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
 											</a>
 											<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
-												onclick="return loadVars(1002,'1002');" >
+												onclick="return loadVars(1001,'Ana Rojas');" >
 												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
 											</a> 
 											<br>
@@ -136,15 +141,16 @@
 									</tr>
 									<tr class="gradeA">
 										<td>1003</td>
-										<td>12/08/2013</td>
-										<td>Depósito</td>
-										<td>3000.00</td>
+										<td>Miguel Álvarez</td>
+										<td>E-12367291</td>
+										<td>-</td>
+										<td>Tarjeta de Débito</td>
 										<td>
 											<a href="#" style="color: transparent" >
 												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
 											</a>
 											<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
-												onclick="return loadVars(1003,'1003');" >
+												onclick="return loadVars(1001,'Ana Rojas');" >
 												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
 											</a> 
 											<br>
@@ -156,17 +162,17 @@
 					</div>
 				</div>
 				<div class="spacer"></div>
+        	</div>
        	</div>
-		</div>
 		<div id="deleteUser">
 			<div id="signup-ct">
-				<h3 id="see_id" class="sprited" > Eliminar Movimiento Cuenta</h3>
+				<h3 id="see_id" class="sprited" > Eliminar Admisión</h3>
 				<br><br>
-				<span>¿Está seguro que desea eliminar el movimiento '<span class="cliente"></span>' y su información asociada? </span> <br><br>
+				<span>¿Está seguro que desea eliminar del sistema la admisión de <span class="cliente"></span>? </span> <br><br>
 				<div id="signup-header">
 					<a class="close_x" id="close_x"  href="#"></a>
 				</div>
-				<form action="accountMovements.html" method="post"  onsubmit="return setV(this)">
+				<form action="admission.html" method="post"  onsubmit="return setV(this)">
 					<input type="hidden" id="userId" class="good_input" name="userId"  value=""/>
 					<div class="btn-fld">
 						<input type="submit"  class="buttonPopUpDelete"  name="sbmtButton" value="Aceptar"  />
