--- a/WebContent/showBankAccount.html
+++ b/WebContent/showBankAccount.html
@@ -19,9 +19,7 @@
 				<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
 		    	<ul>
 	            	<li class="menuitem"><a href="bankAccounts.html">Ver Cuentas</a></li>
-	            </ul>	            	
-				<ul>
-	            	<li class="menuitem"><a href="createBankAccount.html">Crear Cuenta</a></li>
+	            	<li class="menuitem"><a href="createBankAccount.html" style="margin-left:10px;">Crear Cuenta</a></li>
 	            </ul>
 				<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         	</div>        
