--- a/WebContent/showHospitalization.html
+++ b/WebContent/showHospitalization.html
@@ -62,6 +62,9 @@
 	        </div>         
         	<div id="menu">
 				<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
+				<ul>
+	            	<li class="menuitem"><a href="hospitalization.html">Ver Hospitalizaciones</a></li>
+	            </ul>
 				<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         	</div>        
 			<div id="leftmenu">
