--- a/WebContent/createDepartment.html
+++ b/WebContent/createDepartment.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 		<link rel="stylesheet" type="text/css" href="./css/styleAdmin.css" />
-		<title>Crear Departamento</title>
+		<title>Crear Unidad</title>
 		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/ui-lightness/jquery-ui.css" />
 	  	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
 		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
@@ -18,7 +18,7 @@
         	<div id="menu">
 				<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
 		    	<ul>
-	            	<li class="menuitem"><a href="departments.html">Ver Departamentos</a></li>
+	            	<li class="menuitem"><a href="departments.html">Ver Unidades</a></li>
 	            </ul>
 				<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         	</div>        
@@ -33,8 +33,8 @@
 						<li><a href="protocols.html">Protocolos</a></li>
 						<li><a href="services.html">Servicios</a></li>
 						<li><a href="supplyAreas.html">Suministros</a></li>
-						<li><a class="active" href="departments.html">Departamentos</a></li>
-						<li><a href="doctors.html">Doctores</a></li>
+						<li><a class="active" href="departments.html">Unidades</a></li>
+						<li><a href="doctors.html">Especialistas</a></li>
 						<li><a href="bank.html">Cajas</a></li>
 						<li><a href="bankAccounts.html">Bancos</a></li>
 						<li><a href="accounts.html">Cuentas</a></li>
@@ -43,7 +43,7 @@
 	            <div id="leftmenu_bottom"></div>
 	        </div>
         	<div id="content" style="position:absolute;">	
-	        	<h2>Crear Departamento:</h2>
+	        	<h2>Crear Unidad:</h2>
 				<br>
 				<fieldset>
 					<label for="name">Nombre:</label>
