--- a/WebContent/createEstimation.html
+++ b/WebContent/createEstimation.html
@@ -88,8 +88,8 @@
 						<li><a href="protocols.html">Protocolos</a></li>
 						<li><a href="services.html">Servicios</a></li>
 						<li><a href="supplyAreas.html">Suministros</a></li>
-						<li><a href="departments.html">Departamentos</a></li>
-						<li><a href="doctors.html">Doctores</a></li>
+						<li><a href="departments.html">Unidades</a></li>
+						<li><a href="doctors.html">Especialistas</a></li>
 						<li><a href="bank.html">Cajas</a></li>
 						<li><a href="bankAccounts.html">Bancos</a></li>
 						<li><a href="accounts.html">Cuentas</a></li>
@@ -113,7 +113,7 @@
 					    <b> Nombre: </b> Ana Rojas<br><br>
 					    </p>
 					    <fieldset>
-					  	<label> Departamento: </label>
+					  	<label> Unidad: </label>
 					    <input type="text" name="departament" id="departament" value="" readonly>
 					    <br><br>
 					   <label>Médico Tratante: </label> <input type="text" name="doctorName" id="doctorName" readonly>
