--- a/WebContent/createSupplyArea.html
+++ b/WebContent/createSupplyArea.html
@@ -33,7 +33,7 @@
 						<li><a href="protocols.html">Protocolos</a></li>
 						<li><a href="services.html">Servicios</a></li>
 						<li><a class="active" href="supplyAreas.html">Suministros</a></li>
-						<li><a href="departments.html">Departamentos</a></li>
+						<li><a href="departments.html">Especialistas</a></li>
 						<li><a href="doctors.html">Doctores</a></li>
 						<li><a href="bank.html">Cajas</a></li>
 						<li><a href="bankAccounts.html">Bancos</a></li>
