--- a/WebContent/departments.html
+++ b/WebContent/departments.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 	<link rel="stylesheet" type="text/css" href="./css/styleAdmin.css" />
-	<title>Departamentos</title>
+	<title>Unidades</title>
 	<script type="text/javascript" src="./js/jquery.js"></script>
 	<script type="text/javascript" src="./js/jquery.dataTables.js"></script>
 	<script type="text/javascript" src="./js/jquery.leanModal.min.js"></script>
@@ -59,7 +59,7 @@
         <div id="menu">
 			<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
 			<ul>
-            	<li class="menuitem"><a href="createDepartment.html">Crear Departamento</a></li>
+            	<li class="menuitem"><a href="createDepartment.html">Crear Unidad</a></li>
             </ul>
 	    	<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         </div>        
@@ -74,8 +74,8 @@
 					<li><a href="protocols.html">Protocolos</a></li>
 					<li><a href="services.html">Servicios</a></li>
 					<li><a href="supplyAreas.html">Suministros</a></li>
-					<li><a class="active" href="departments.html">Departamentos</a></li>
-					<li><a href="doctors.html">Doctores</a></li>
+					<li><a class="active" href="departments.html">Unidades</a></li>
+					<li><a href="doctors.html">Especialistas</a></li>
 					<li><a href="bank.html">Cajas</a></li>
 					<li><a href="bankAccounts.html">Bancos</a></li>
 					<li><a href="accounts.html">Cuentas</a></li> 
@@ -84,7 +84,7 @@
             <div id="leftmenu_bottom"></div>
         </div>  
 		<div id="content">  
-			<h2>Departamentos:</h2>
+			<h2>Unidades:</h2>
 			<div id="dt_example">
 					<div id="container">
 						<div id="demo">
@@ -149,9 +149,9 @@
 		</div>
 		<div id="deleteUser">
 			<div id="signup-ct">
-				<h3 id="see_id" class="sprited" > Eliminar Departamento</h3>
+				<h3 id="see_id" class="sprited" > Eliminar Unidad</h3>
 				<br><br>
-				<span>¿Está seguro que desea eliminar el departamento '<span class="cliente"></span>' y su información asociada? </span> <br><br>
+				<span>¿Está seguro que desea eliminar la unidad '<span class="cliente"></span>' y su información asociada? </span> <br><br>
 				<div id="signup-header">
 					<a class="close_x" id="close_x"  href="#"></a>
 				</div>
