--- a/WebContent/editDoctor.html
+++ b/WebContent/editDoctor.html
@@ -131,8 +131,8 @@
 						<li><a href="protocols.html">Protocolos</a></li>
 						<li><a href="services.html">Servicios</a></li>
 						<li><a href="supplyAreas.html">Suministros</a></li>
-						<li><a href="departments.html">Departamentos</a></li>
-						<li><a class="active" href="doctors.html">Doctores</a></li>
+						<li><a href="departments.html">Unidades</a></li>
+						<li><a class="active" href="doctors.html">Especialistas</a></li>
 						<li><a href="bank.html">Cajas</a></li>
 						<li><a href="bankAccounts.html">Bancos</a></li>
 						<li><a href="accounts.html">Cuentas</a></li>
@@ -147,7 +147,7 @@
 					<ul>
 					    <li><a href="#tabs-1">Datos Personales</a></li>
 					    <li><a href="#tabs-2">Datos Contacto</a></li>
-					    <li><a href="#tabs-3">Departamento</a></li>
+					    <li><a href="#tabs-3">Unidad</a></li>
 			  		</ul>
 			  		<div id="tabs-1">
 						<fieldset>
@@ -242,7 +242,7 @@
 			  		</div>			  		
 			  		<div id="tabs-3">
 			  			<fieldset>
-							<label for="name">Departamento:</label>
+							<label for="name">Unidad:</label>
 							<div style="float:left;">
 							<select multiple="multiple" id="my-select" name="my-select[]">
 								<option value="337" >ALERGOLOGÍA</option>
