--- a/WebContent/showHospitalizationOld.html
+++ b/WebContent/showHospitalizationOld.html
@@ -96,6 +96,8 @@
 					    <li><a href="#tabs-2">Protocolos</a></li>
 					    <li><a href="#tabs-3">Servicios</a></li>
 					    <li><a href="#tabs-4">Suministros</a></li>
+					    <li><a href="#tabs-5">Evolución</a></li>
+					    <li><a href="#tabs-6">Signos Vitales</a></li>
 			  		</ul>
   					<div id="tabs-1">
   						<br>
@@ -182,6 +184,103 @@
 							</tbody>
 						</table>
 						<br>
+					</div>
+					<div id="tabs-5">
+					<br>
+						<table id="sweetTable">
+								<tbody>
+									<tr>
+										<th>Fecha</th>
+										<th>Médico</th>
+										<th>Ver Detalle</th>
+									</tr>				
+									<tr>
+										<td>27/06/2013 07:35 PM</td>
+										<td>Ricardo García</td>
+										<td style="text-align:center;">
+									<a href="showEvolutionDetail.html?function=showHospitalization" style="color: transparent" >
+										<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
+									</a>
+								</td>
+							</tr>				
+							<tr>
+								<td>23/06/2013 09:40 AM</td>
+								<td>Javier Fernandez</td>
+								<td style="text-align:center;">										
+									<a href="#" style="color: transparent" >
+										<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
+									</a>
+								</td>
+							</tr>				
+							<tr>
+								<td>20/06/2013 07:35 AM</td>
+								<td>Ricardo García</td>
+								<td style="text-align:center;">										
+									<a href="#" style="color: transparent" >
+										<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
+									</a>
+								</td>
+							</tr>				
+							<tr>
+								<td>19/06/2013 10:06 AM</td>
+								<td>Ricardo García</td>
+								<td style="text-align:center;">										
+									<a href="#" style="color: transparent" >
+										<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
+									</a>
+								</td>
+							</tr>
+						</tbody>
+						</table>
+						<br>
+					</div>
+					<div id="tabs-6">
+						<br>
+		    <table id="sweetTable">
+				<tbody>
+					<tr>
+						<th>Fecha de Toma</th>
+						<th>Hora de Toma</th>
+						<th>Ver Detalle</th>
+					</tr>				
+					<tr>
+						<td>27/06/2013</td>
+						<td>07:35 PM</td>
+						<td style="text-align:center;">
+							<a href="showVitalSignsDetail.html?function=showHospitalization" style="color: transparent"  >
+								<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
+							</a>
+						</td>
+					</tr>				
+					<tr>
+						<td>23/06/2013</td>
+						<td>09:40 AM</td>
+						<td style="text-align:center;">										
+							<a href="#" style="color: transparent" >
+								<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
+							</a>
+						</td>
+					</tr>				
+					<tr>
+						<td>20/06/2013</td>
+						<td>07:35 AM</td>
+						<td style="text-align:center;">										
+							<a href="#" style="color: transparent" >
+								<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
+							</a>
+						</td>
+					</tr>				
+					<tr>
+						<td>19/06/2013</td>
+						<td>10:06 AM</td>
+						<td style="text-align:center;">										
+							<a href="#" style="color: transparent" >
+								<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
+							</a>
+						</td>
+					</tr>
+				</tbody>
+			</table><br>
 					</div>
 				</div>
 				<div id="botonera">
