--- a/WebContent/doctors.html
+++ b/WebContent/doctors.html
@@ -76,8 +76,8 @@
 					<li><a href="protocols.html">Protocolos</a></li>
 					<li><a href="services.html">Servicios</a></li>
 					<li><a href="supplyAreas.html">Suministros</a></li>
-					<li><a href="departments.html">Departamentos</a></li>
-					<li><a class="active" href="doctors.html">Doctores</a></li>
+					<li><a href="departments.html">Unidades</a></li>
+					<li><a class="active" href="doctors.html">Especialistas</a></li>
 					<li><a href="bank.html">Cajas</a></li>
 					<li><a href="bankAccounts.html">Bancos</a></li>
 					<li><a href="accounts.html">Cuentas</a></li> 
@@ -96,7 +96,7 @@
 										<th>ID</th>
 										<th>Nombre</th>
 										<th>Apellido</th>
-										<th>Departamento(s)</th>
+										<th>Unidad(es)</th>
 										<th>Acciones</th>
 									</tr>
 								</thead>
