--- a/WebContent/editAccountPayable.html
+++ b/WebContent/editAccountPayable.html
@@ -67,7 +67,7 @@
 						<li><a href="protocols.html">Protocolos</a></li>
 						<li><a href="services.html">Servicios</a></li>
 						<li><a href="supplyAreas.html">Suministros</a></li>
-						<li><a href="departments.html">Departamentos</a></li>
+						<li><a href="departments.html">Unidades</a></li>
 						<li><a href="doctors.html">Doctores</a></li>
 						<li><a href="bank.html">Cajas y Bancos</a></li>
 						<li><a class="active" href="accounts.html">Cuentas</a></li>
