--- a/WebContent/editHospitalizationOld.html
+++ b/WebContent/editHospitalizationOld.html
@@ -74,6 +74,8 @@
 					    <li><a href="#tabs-2">Protocolos</a></li>
 					    <li><a href="#tabs-3">Servicios</a></li>
 					    <li><a href="#tabs-4">Suministros</a></li>
+					    <li><a href="#tabs-5">Evolución</a></li>
+					    <li><a href="#tabs-6">Signos Vitales</a></li>
 			  		</ul>
   					<div id="tabs-1">
   						<div id="hosp">
@@ -82,7 +84,7 @@
 							<p><b>Fecha de Ingreso:  </b> <span style="margin-left:48px;">20/06/2013 07:35 AM  <br></span> </p>
 							</div>
 							<fieldset>
-								<label>Unidad: </label>
+								<label>Especialista: </label>
 							   <input type="text" name="departament" id="departament" value="Cirugía" readonly>
 							    <br><br>
 							   <label>Médico Tratante: </label> <input type="text" name="doctorName" id="doctorName" value="Ricardo García" readonly>
@@ -272,7 +274,147 @@
 							</tbody>
 						</table>
 						<br>
-					</div>							
+					</div>
+					<div id="tabs-5">
+						<div style="text-align:right;">
+							<a href="addEvolutionDetail.html?function=editHospitalization" style="color: #006c92; font-weight: bold;">
+								<img alt="logo" src="./images/add.png" height="12" width="12" />Agregar Registro
+							</a>						
+						</div>
+						<br>
+					    <table id="sweetTable">
+							<tbody>
+								<tr>
+									<th>Fecha</th>
+									<th>Médico</th>
+									<th>Acción</th>
+								</tr>				
+								<tr>
+									<td>27/06/2013 07:35 PM</td>
+									<td>Ricardo García</td>
+									<td>
+										<a href="editEvolutionDetail.html?function=editHospitalization" style="color: transparent" >
+											<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Ver Detalle" />
+										</a>										
+										<a id="go" rel="leanModal" href="#deleteEvaluation" style="color: #f7941e; font-weight: bold;" 
+											onclick="return loadVars(1001,'Ricardo García');" >
+											<img alt="logo" src="./images/delete.png"  height="16" width="16" title="Eliminar" />
+										</a>
+									</td>
+								</tr>				
+								<tr>
+									<td>23/06/2013 09:40 AM</td>
+									<td>Javier Fernandez</td>
+									<td>										
+										<a href="#" style="color: transparent" >
+											<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Ver Detalle" />
+										</a>										
+										<a id="go" rel="leanModal" href="#deleteEvaluation" style="color: #f7941e; font-weight: bold;" 
+											onclick="return loadVars(1001,'Javier Fernandez');" >
+											<img alt="logo" src="./images/delete.png"  height="16" width="16" title="Eliminar" />
+										</a>
+									</td>
+								</tr>				
+								<tr>
+									<td>20/06/2013 07:35 AM</td>
+									<td>Ricardo García</td>
+									<td>										
+										<a href="#" style="color: transparent" >
+											<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Ver Detalle" />
+										</a>										
+										<a id="go" rel="leanModal" href="#deleteEvaluation" style="color: #f7941e; font-weight: bold;" 
+											onclick="return loadVars(1001,'Ricardo García');" >
+											<img alt="logo" src="./images/delete.png"  height="16" width="16" title="Eliminar" />
+										</a>
+									</td>
+								</tr>				
+								<tr>
+									<td>19/06/2013 10:06 AM</td>
+									<td>Ricardo García</td>
+									<td>										
+										<a href="#" style="color: transparent" >
+											<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Ver Detalle" />
+										</a>										
+										<a id="go" rel="leanModal" href="#deleteEvaluation" style="color: #f7941e; font-weight: bold;" 
+											onclick="return loadVars(1001,'Ricardo García');" >
+											<img alt="logo" src="./images/delete.png"  height="16" width="16" title="Eliminar" />
+										</a>
+									</td>
+								</tr>
+							</tbody>
+						</table>
+						<br>
+					</div>
+					<div id="tabs-6">
+						<div style="text-align:right;">
+							<a  href="addVitalSignsDetail.html?function=editHospitalization"  style="color: #006c92; font-weight: bold;" >
+								<img alt="logo" src="./images/add.png"  height="12" width="12" />Agregar Registro
+							</a>						
+						</div>
+						<br>
+		      			 <table id="sweetTable">
+							<tbody>
+								<tr>
+									<th>Fecha de Toma</th>
+									<th>Hora de Toma</th>
+									<th>Acción</th>
+								</tr>				
+								<tr>
+									<td>27/06/2013</td>
+									<td>07:35 PM</td>
+									<td>
+										<a href="editVitalSignsDetail.html?function=editHospitalization" style="color: transparent" id="editVital" >
+											<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Ver Detalle" />
+										</a>										
+										<a id="go" rel="leanModal" href="#deleteVitalSign" style="color: #f7941e; font-weight: bold;" 
+											onclick="return loadVars(1001,'27/06/2013 07:35 PM');" >
+											<img alt="logo" src="./images/delete.png"  height="16" width="16" title="Eliminar" />
+										</a>
+									</td>
+								</tr>				
+								<tr>
+									<td>23/06/2013</td>
+									<td>09:40 AM</td>
+									<td>										
+										<a href="#" style="color: transparent" >
+											<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Ver Detalle" />
+										</a>										
+										<a id="go" rel="leanModal" href="#deleteVitalSign" style="color: #f7941e; font-weight: bold;" 
+											onclick="return loadVars(1001,'23/06/2013 09:40 AM');" >
+											<img alt="logo" src="./images/delete.png"  height="16" width="16" title="Eliminar" />
+										</a>
+									</td>
+								</tr>				
+								<tr>
+									<td>20/06/2013</td>
+									<td>07:35 AM</td>
+									<td>										
+										<a href="#" style="color: transparent" >
+											<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Ver Detalle" />
+										</a>										
+										<a id="go" rel="leanModal" href="#deleteVitalSign" style="color: #f7941e; font-weight: bold;" 
+											onclick="return loadVars(1001,'20/06/2013 07:35 AM');" >
+											<img alt="logo" src="./images/delete.png"  height="16" width="16" title="Eliminar" />
+										</a>
+									</td>
+								</tr>				
+								<tr>
+									<td>19/06/2013</td>
+									<td>10:06 AM</td>
+									<td>										
+										<a href="showEvaluation.html" style="color: transparent" >
+											<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Ver Detalle" />
+										</a>										
+										<a id="go" rel="leanModal" href="#deleteVitalSign" style="color: #f7941e; font-weight: bold;" 
+											onclick="return loadVars(1001,'19/06/2013 10:06 AM');" >
+											<img alt="logo" src="./images/delete.png"  height="16" width="16" title="Eliminar" />
+										</a>
+									</td>
+								</tr>
+							</tbody>
+						</table>
+						<br>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -323,6 +465,38 @@
 					</div>
 		 		</form>
 			</div>
-		</div>		
+		</div>
+		<div id="deleteEvaluation">
+			<div id="signup-ct">
+				<h3 id="see_id" class="sprited" > Eliminar Evolución</h3>
+				<br><br>
+				<span>¿Está seguro que desea eliminar la evolución suministrada por el Dr. <span class="cliente"></span>? </span> <br><br>
+				<div id="signup-header">
+					<a class="close_x" id="close_x"  href="#"></a>
+				</div>
+				<form action="editHospitalization.html#tabs-5" method="post"  onsubmit="return setV(this)">
+					<input type="hidden" id="userId" class="good_input" name="userId"  value=""/>
+					<div class="btn-fld">
+						<input type="submit"  class="buttonPopUpDelete"  name="sbmtButton" value="Aceptar"  />
+					</div>
+		 		</form>
+			</div>
+		</div>
+		<div id="deleteVitalSign">
+			<div id="signup-ct">
+				<h3 id="see_id" class="sprited" > Eliminar Toma</h3>
+				<br><br>
+				<span>¿Está seguro que desea eliminar la tomar hecha el <span class="cliente"></span>? </span> <br><br>
+				<div id="signup-header">
+					<a class="close_x" id="close_x"  href="#"></a>
+				</div>
+				<form action="editHospitalization.html#tabs-6" method="post"  onsubmit="return setV(this)">
+					<input type="hidden" id="userId" class="good_input" name="userId"  value=""/>
+					<div class="btn-fld">
+						<input type="submit"  class="buttonPopUpDelete"  name="sbmtButton" value="Aceptar"  />
+					</div>
+		 		</form>
+			</div>
+		</div>
 	</body>
 </html>
