cambio nombre secciones

--- a/WebContent/doctors.html
+++ b/WebContent/doctors.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 	<link rel="stylesheet" type="text/css" href="./css/styleAdmin.css" />
-	<title>Doctores</title>
+	<title>Especialistas</title>
 	<script type="text/javascript" src="./js/jquery.js"></script>
 	<script type="text/javascript" src="./js/jquery.dataTables.js"></script>
 	<script type="text/javascript" src="./js/jquery.leanModal.min.js"></script>
@@ -61,7 +61,7 @@
         <div id="menu">
 			<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
 			<ul>
-            	<li class="menuitem"><a href="createDoctor.html">Crear Doctor</a></li>
+            	<li class="menuitem"><a href="createDoctor.html">Crear Especialista</a></li>
             </ul>
 	    	<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         </div>        
@@ -86,7 +86,7 @@
             <div id="leftmenu_bottom"></div>
         </div>  
 		<div id="content">  
-			<h2>Doctores:</h2>
+			<h2>Especialistas:</h2>
 			<div id="dt_example">
 					<div id="container">
 						<div id="demo">
@@ -159,9 +159,9 @@
 		</div>
 		<div id="deleteUser">
 			<div id="signup-ct">
-				<h3 id="see_id" class="sprited" > Eliminar Doctor</h3>
+				<h3 id="see_id" class="sprited" > Eliminar Especialista</h3>
 				<br><br>
-				<span>¿Está seguro que desea eliminar el doctor '<span class="cliente"></span>' y su información asociada? </span> <br><br>
+				<span>¿Está seguro que desea eliminar el especialista '<span class="cliente"></span>' y su información asociada? </span> <br><br>
 				<div id="signup-header">
 					<a class="close_x" id="close_x"  href="#"></a>
 				</div>
