--- a/WebContent/printEstimation.html
+++ b/WebContent/printEstimation.html
@@ -59,7 +59,7 @@
 			<label for="name" class="etiq"><span id="idCard">Cédula de Identidad: </span></label>V-12345678<br><br>
 			<label for="name" class="etiq"><span id="idCard">Nombre: </span></label>Ana Rojas<br><br>					
 			<label for="name" class="etiq"><span id="idCard">Médico Tratante: </span></label>Ricardo García<br><br>
-			<label for="name" class="etiq"><span id="idCard">Departamento: </span></label>Cirugía<br><br>
+			<label for="name" class="etiq"><span id="idCard">Unidad: </span></label>Cirugía<br><br>
 			<label for="name" class="etiq"><span id="idCard">Responsable del Pago: </span></label>Seguros La Previsora<br><br> 
 		</fieldset>
 		<br>
