--- a/WebContent/searchDoctor.html
+++ b/WebContent/searchDoctor.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 	<link rel="stylesheet" type="text/css" href="./css/styleAdmin.css" />
-	<title>Escoger Doctor</title>
+	<title>Escoger Especialista</title>
 	<script type="text/javascript" src="./js/jquery.js"></script>
 	<script type="text/javascript" src="./js/jquery.dataTables.js"></script>
 	<script type="text/javascript" src="./js/jquery.leanModal.min.js"></script>
@@ -118,8 +118,8 @@
 					<li><a href="protocols.html">Protocolos</a></li>
 					<li><a href="services.html">Servicios</a></li>
 					<li><a id="supplyAreas" href="supplyAreas.html">Suministros</a></li>
-					<li><a href="departments.html">Departamentos</a></li>
-					<li><a href="doctors.html">Doctores</a></li>
+					<li><a href="departments.html">Unidades</a></li>
+					<li><a href="doctors.html">Especialistas</a></li>
 					<li><a href="bank.html">Cajas</a></li>
 					<li><a href="bankAccounts.html">Bancos</a></li>
 					<li><a id="accounts" href="accounts.html">Cuentas</a></li>
@@ -131,8 +131,8 @@
 			<form action="" method="get" id="form" style="display: inline;">
 				
 			<h2>Escoger medico tratante:</h2><br>
-			<p> Por favor seleccione el departamento del médico tratante y haga clic en "Siguiente": </p><br>
-			<p><b>Departamento:  </b> 
+			<p> Por favor seleccione la unidad del médico tratante y haga clic en "Siguiente": </p><br>
+			<p><b>Unidad:  </b> 
 				<select id="department" name="department" style="width: 230px;">
 								<option value="337" >ALERGOLOGÍA</option>
 							 	<option value="660" >ANALISTAS DE SEGUROS</option>
