--- a/WebContent/showHospitalizationOld.html
+++ b/WebContent/showHospitalizationOld.html
@@ -78,8 +78,8 @@
 						<li><a href="protocols.html">Protocolos</a></li>
 						<li><a href="services.html">Servicios</a></li>
 						<li><a href="supplyAreas.html">Suministros</a></li>
-						<li><a href="departments.html">Departamentos</a></li>
-						<li><a href="doctors.html">Doctores</a></li>
+						<li><a href="departments.html">Unidades</a></li>
+						<li><a href="doctors.html">Especialistas</a></li>
 						<li><a href="bank.html">Cajas</a></li>
 						<li><a href="bankAccounts.html">Bancos</a></li>
 						<li><a href="accounts.html">Cuentas</a></li>
@@ -107,7 +107,7 @@
 					   <div class="leftColum"> <b>Ubicación:</b></div> UCI<br>
 					   <div class="leftColum"> <b>Cama:</b></div> Cama 1<br><br>
 					   <div class="leftColum"> <b>Médico Tratante:</b></div> Ricardo García<br>
-					   <div class="leftColum"><b>Departamento:</b></div> Cirugía<br>
+					   <div class="leftColum"><b>Unidad:</b></div> Cirugía<br>
 					   <div class="leftColum"><b> Responsable del Pago:</b></div> La Previsora<br><br>
 					   
   					</div>
