--- a/WebContent/createDoctor.html
+++ b/WebContent/createDoctor.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 		<link rel="stylesheet" type="text/css" href="./css/styleAdmin.css" />
-		<title>Crear Doctor</title>
+		<title>Crear Especialista</title>
 		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/ui-lightness/jquery-ui.css" />
 		<link href="./css/multi-select.css" media="screen" rel="stylesheet" type="text/css">
 	  	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
@@ -115,7 +115,7 @@
         	<div id="menu">
 				<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
 		    	<ul>
-	            	<li class="menuitem"><a href="doctors.html">Ver Doctores</a></li>
+	            	<li class="menuitem"><a href="doctors.html">Ver Especialistas</a></li>
 	            </ul>
 				<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         	</div>        
@@ -140,7 +140,7 @@
 	            <div id="leftmenu_bottom"></div>
 	        </div>
         	<div id="content" style="position:absolute;">	
-	        	<h2>Crear Doctor:</h2>
+	        	<h2>Crear Especialista:</h2>
 				<br>
 				<div id="tabs">
 					<ul>
