--- a/WebContent/printHospitalization.html
+++ b/WebContent/printHospitalization.html
@@ -62,7 +62,7 @@
 			<label for="name" class="etiq"><span id="idCard">Ubicación: </span></label>UCI<br><br>
 			<label for="name" class="etiq"><span id="idCard">Cama: </span></label>Cama 1<br> <br>
 			<label for="name" class="etiq"><span id="idCard">Médico Tratante: </span></label>Ricardo García<br><br>
-			<label for="name" class="etiq"><span id="idCard">Departamento: </span></label>Cirugía<br>  <br>
+			<label for="name" class="etiq"><span id="idCard">Unidad: </span></label>Cirugía<br>  <br>
 			<label for="name" class="etiq"><span id="idCard">Responsable del Pago: </span></label>La Previsora<br> <br>
 		</fieldset>
 		<br>
