--- a/WebContent/protocols.html
+++ b/WebContent/protocols.html
@@ -75,8 +75,8 @@
 					<li><a class="active" href="protocols.html">Protocolos</a></li>
 					<li><a href="services.html">Servicios</a></li>
 					<li><a href="supplyAreas.html">Suministros</a></li>
-					<li><a href="departments.html">Departamentos</a></li>
-					<li><a href="doctors.html">Doctores</a></li>
+					<li><a href="departments.html">Unidades</a></li>
+					<li><a href="doctors.html">Especialistas</a></li>
 					<li><a href="bank.html">Cajas</a></li>
 					<li><a href="bankAccounts.html">Bancos</a></li>
 					<li><a href="accounts.html">Cuentas</a></li> 
@@ -93,7 +93,7 @@
 								<thead>
 									<tr>
 										<th>ID</th>
-										<th>Departamento</th>
+										<th>Unidad</th>
 										<th>Nombre</th>
 										<th>Acciones</th>
 									</tr>
