--- a/WebContent/showAccountPayable.html
+++ b/WebContent/showAccountPayable.html
@@ -67,8 +67,8 @@
 						<li><a href="protocols.html">Protocolos</a></li>
 						<li><a href="services.html">Servicios</a></li>
 						<li><a href="supplyAreas.html">Suministros</a></li>
-						<li><a href="departments.html">Departamentos</a></li>
-						<li><a href="doctors.html">Doctores</a></li>
+						<li><a href="departments.html">Unidades</a></li>
+						<li><a href="doctors.html">Especialistas</a></li>
 						<li><a href="bank.html">Cajas y Bancos</a></li>
 						<li><a class="active" href="accounts.html">Cuentas</a></li>
 					</ul>
