--- a/WebContent/showEstimationForAdmission.html
+++ b/WebContent/showEstimationForAdmission.html
@@ -53,8 +53,8 @@
 						<li><a href="protocols.html">Protocolos</a></li>
 						<li><a href="services.html">Servicios</a></li>
 						<li><a href="supplyAreas.html">Suministros</a></li>
-						<li><a href="departments.html">Departamentos</a></li>
-						<li><a href="doctors.html">Doctores</a></li>
+						<li><a href="departments.html">Unidades</a></li>
+						<li><a href="doctors.html">Especialistas</a></li>
 						<li><a href="bank.html">Cajas</a></li>
 						<li><a href="bankAccounts.html">Bancos</a></li>
 						<li><a href="accounts.html">Cuentas</a></li>
@@ -77,7 +77,7 @@
 					    Cédula: V-12345678<br><br>
 					    Nombre: Ana Rojas<br><br>
 					    Médico Tratante: Ricardo García<br><br>
-					    Departamento: Cirugía<br><br>
+					    Unidad: Cirugía<br><br>
 					    Responsable del Pago: La Previsora<br><br>
 					    </p>
   					</div>
