--- a/WebContent/supplies.html
+++ b/WebContent/supplies.html
@@ -76,8 +76,8 @@
 					<li><a href="protocols.html">Protocolos</a></li>
 					<li><a href="services.html">Servicios</a></li>
 					<li><a class="active" href="supplyAreas.html">Suministros</a></li>
-					<li><a href="departments.html">Departamentos</a></li>
-					<li><a href="doctors.html">Doctores</a></li>
+					<li><a href="departments.html">Unidades</a></li>
+					<li><a href="doctors.html">Especialistas</a></li>
 					<li><a href="bank.html">Cajas</a></li>
 					<li><a href="bankAccounts.html">Bancos</a></li>
 					<li><a href="accounts.html">Cuentas</a></li> 
